# ERP_SIAEC

./: .dockerignore  .env.development  .env.example  .gitignore  CLAUDE.md  Dockerfile  ERP_Integrated_SSOT_v2.0_Merged_2026-03-09_MiniPatch1-12.md  ERP_Integrated_SSOT_v2.0_Merged_2026-03-09_MiniPatch1-12a.md  ERP_Integrated_SSOT_v2.0_Merged_2026-03-09_MiniPatch1-12b.md  ERP_SSOT_v2_Implementation_Plan_v2_MiniPatch1-12_Aligned_2026-03-09.md  ERP_SSOT_v2_Implementation_Plan_v2_MiniPatch1-12b_Aligned_2026-03-09.md  MANIFEST.in  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  erp_ui_v3_patch12.html  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: alembic.ini  env.py
app/: config.py  database.py  main.py
docs/: ERP_Integrated_SSOT_v2_0_Merged_2026-03-10_MiniPatch1-12b-fix2.md  ERP_Integrated_SSOT_v2_0_Merged_2026-03-10_MiniPatch1-12b-fix3.md  ERP_SSOT_v2_Implementation_Plan_v2_MiniPatch1-12b-fix2_Aligned_2026-03-10.md  ERP_SSOT_v2_Implementation_Plan_v2_MiniPatch1-12b-fix3_Aligned_2026-03-10.md  htmx_rewrite_plan.md  operator_feature_guide.md  operator_feature_guide_rewrite_draft.md
erp_sample_dataset_bundle/: README.md  dataset_counts.csv  demo_personas.csv  erp_sample_dataset_catalog.xlsx  load_order.txt  manifest.json  scenario_matrix.csv
scripts/: create_views.py  ensure_database.py  load_smoke_dataset.py
tests/: conftest.py  test_auth.py  test_config.py  test_migration.py  test_migration_002.py  test_ot.py  test_reference.py  test_reporting_views.py  test_shops.py  test_stats_rfo.py  test_task_core.py  test_users.py  (+3 more)
(+134 files in other folders)
