[project]
name = "cis-erp"
version = "0.1.0"
description = "CIS ERP - MRO Aviation Facility Management System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "alembic>=1.13.1",
    "aioodbc>=0.4.0",
    "pyodbc>=5.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
